# bind_template

./: .coverage  .gitignore  CMakeLists.txt  README.md  exo.md  pixi.toml  pyproject.toml
src/bind_template/: example.py
src/bind_template/ndarray/: __init__.py
src/bind_template/scalar/: __init__.py
src/cpp/bindings/: bind_process_ndarray.cpp  bind_process_scalar.cpp  bindings.cpp  bindings_scalar.cpp
src/cpp/lib/: process_ndarray.cpp  process_ndarray.h  process_ndarry.cpp  process_scalar.cpp  process_scalar.h
tests/e2e/: readme.md
tests/integration/: readme.md
tests/unit/: readme.md  test_example.py
tests/unit/ndarray/: test_ProcessNdarray.py
tests/unit/scalar/: test_ProcessScalar.py
