[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[project]
name = "bind_template"
version = "0.0.1"
description = "Package example of binding with nanobind."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Colley Jean-Marc", email = "jcolley@lpnhe.in2p3.fr" },
]
classifiers = [
    "License :: BSD",
]
# Optional: runtime dependency specification
# dependencies = [ "cryptography >=41.0" ]

[project.urls]
Homepage = "https://gitlab.in2p3.fr/colley/bind_template"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
wheel.packages = ["src/bind_template"]


# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

